-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0 Beta1
-
None
-
-
b13c610f5 (dev), 1f3f99f67 (6.7)
#include <QtGui> int main(int argc, char *argv[]) { qDebug() << qVersion() << QIcon::ThemeIcon::DocumentProperties; return 0; }
does not compile on WIndows:
..\icontest\main.cpp(5): error C2039: 'DocumentPropertiesW': is not a member
of 'QIcon::ThemeIcon'
C:\dev\qt-67\install-qt-67\include\QtGui/qicon.h(25): note: see declaration of 'QIcon::ThemeIcon'
Reason being that <QtGui> pulls in <windows.h> via OpenGL / wgl.h (qopengl.h:13) and there is a (printer) Win32 API function DocumentProperties() which has a corresponding UNICODE define
"#define DocumentProperties DocumentPropertiesW" which then triggers.
- is required for
-
QTBUG-119952 Qt 6.7 API Change Review
-
- Closed
-